# holdem-win-probability

./: .gitignore  README.md  setup.cfg
src/: __init__.py  generator_of_tests.py  hold_em.py
src/holdem_probability/: generator_of_tests.py  holdem.py
tests/: custom_tests.py  five_community_cards_tests.py  four_community_cards_tests.py  test_hold_em.py  test_holdem.py  three_community_cards_tests.py  zero_community_cards_tests.py
