[metadata]
name = holdem-win-probability-eeeeeeeelias
version = 0.0.1
author = Ilya Pogodaev
author_email = eliasnwr@gmail.com
description = Win probability counter for texas Hold'em
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eeeeeeeelias/holdem-win-probability
project_urls =
    Bug Tracker = https://github.com/eeeeeeeelias/holdem-win-probability/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src